Finshed css for about section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Chingu Solo Project - Tier 1</title>
   </head>
 
-  <body>
+  <body class="scroll-two">
     <header>
       <nav class="nav">
         <ul class="nav__list">
@@ -36,33 +36,43 @@
             Let your team manage their support tickets 100% inside Slack
           </p>
           <div
-            onclick="window.location.href='https://chingu-prework.slack.com/oauth/560975757334.2383ad25b47c4046c141649102b424ec6b5886b02b92100c0a4e4b51d7e420a8'"
             class="button button__white"
+            onclick="window.location.href='https://chingu-prework.slack.com/oauth/560975757334.2383ad25b47c4046c141649102b424ec6b5886b02b92100c0a4e4b51d7e420a8'"
           >
-            <img src="img/slack.svg" alt="# image" />
+            <img class="button__img" src="img/slack.svg" alt="# image" />
             <p>Add to <strong>Slack</strong></p>
           </div>
         </div>
         <img class="home__right" src="img/tickybot.svg" alt="" />
       </section>
       <section class="about" id="about">
-        <h2 class="title">What is <string>Ticky</string>Bot</h2>
-        <p class="about__message1">
-          TickyBot is a Slack Bot 🤖 that lets you use support tickets on Slack.
-          This way, you don't need to leave your beloved channel to assist your
-          users, if you don't feel like it. With TickyBot you can easily check
-          if you've received new tickets, change their status, or write a reply,
-          and the ticket will instantly update itself on our site.
-        </p>
-        <p class="about__message2">
-          Support requests shouldn't be handled through Slack's direct messages.
-          Image about someone asking silly questions and the workplace admin
-          asking him/her to open a support ticket so other admins could look
-          into the issue.
-        </p>
+        <h2 class="title">What is <strong>Ticky</strong>Bot</h2>
+        <div class="line"></div>
+        <div class="about__message">
+          <p class="about__message-1">
+            <strong>Ticky</strong>Bot is a Slack Bot 🤖 that lets you use
+            support tickets on Slack. This way, you don't need to leave your
+            beloved channel to assist your users, if you don't feel like it.
+          </p>
+          <p class="about__message-2">
+            With <strong>Ticky</strong>Bot you can easily check if you've
+            received new tickets, change their status, or write a reply, and the
+            ticket will instantly update itself on our site.
+          </p>
+          <p class="about__message-3">
+            Support requests shouldn't be handled through Slack's direct
+            messages.<br />
+            <span
+              >Image about someone asking silly questions and the workplace
+              admin asking him/her to open a support ticket so other admins
+              could look into the issue.</span
+            >
+          </p>
+        </div>
       </section>
       <section class="features" id="features">
         <h2 class="title">How it Works</h2>
+        <div class="line"></div>
         <div class="features__box">
           <img src="img/" alt="" class="features__box-image" />
           <p class="features__box-text">
@@ -94,6 +104,7 @@
       </section>
       <section class="addToSlack" id="addToSlack">
         <h2 class="title">Start Using <strong>Ticky</strong>Bot Today</h2>
+        <div class="line"></div>
         <p class="addToSlack__text1">
           <strong>Ticky</strong>Bot allows Slack teams to manage their support
           tickets 100% inside Slack, without having to switch between different
