Add to Slack section completed for desktop version

--- a/index.html
+++ b/index.html
@@ -107,10 +107,9 @@
         tickets 100% inside Slack, without having to switch between different
         apps.
       </p>
-      <div class="button">
-        <a href="https://chingu-prework.slack.com/oauth/558631221008.d89510cdf8655e0adc5dad37da4150598a30ca9262bcae95c2e339129c3c3cc2"><span><img
-              src="https://tickybott.herokuapp.com/5e594ad76535670e7f227f79c6b72799.svg" alt="# image" /></span>Add to
-          Slack</a>
+      <div class="button button__blue addToSlack__button" onclick="window.location.href='https://chingu-prework.slack.com/oauth/560975757334.2383ad25b47c4046c141649102b424ec6b5886b02b92100c0a4e4b51d7e420a8'">
+        <img class="button__img" src="img/slack.svg" alt="# image" />
+        <p>Add to <strong>Slack</strong></p>
       </div>
       <p class="addToSlack__text">
         ... so you don't need to go back and forth with another app.
