--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   </head>
 
   <body>
-    <header class="header">
+    <header id="header" class="header">
       <ul class="header__list">
-        <li class="header__list-items"><a href="">Home</a></li>
-        <li class="header__list-items"><a href="">About</a></li>
-        <li class="header__list-items"><a href="">Features</a></li>
-        <li class="header__list-items"><a href="">Add to Slack</a></li>
+        <li class="header__list-items"><a href="#home">Home</a></li>
+        <li class="header__list-items"><a href="#about">About</a></li>
+        <li class="header__list-items"><a href="#feature">Features</a></li>
+        <li class="header__list-items"><a href="https://chingu-prework.slack.com/oauth/566591873782.36659e2409863f6b167db1ac2cb05c73e60fde02331bca3d9b84556dd8bfd2b9">Add to Slack</a></li>
       </ul>
     </header>
     <main>
@@ -28,7 +28,7 @@
           <p class="home__left-text">
             Let your team manage their support tickets 100% inside Slack
           </p>
-          <a class="home__left-button button" href=""
+          <a class="home__left-button button" href="https://chingu-prework.slack.com/oauth/566591873782.36659e2409863f6b167db1ac2cb05c73e60fde02331bca3d9b84556dd8bfd2b9"
             ><img src="img/slack.svg" alt="" /><span
               >Add to <strong>Slack</strong></span
             ></a
@@ -104,7 +104,7 @@
         <h3 class="title">Start Using <strong>Ticky</strong>Bot Today</h3>
         <div class="container3">
           <p class="addToSlack-text"><strong>Ticky</strong>Bot allows Slack teams to manage their support tickets 100% inside Slack, without having to switch between different apps.</p>
-          <a class="addToSlack-button button" href=""
+          <a class="addToSlack-button button" href="https://chingu-prework.slack.com/oauth/566591873782.36659e2409863f6b167db1ac2cb05c73e60fde02331bca3d9b84556dd8bfd2b9"
             ><img src="img/slack.svg" alt="" /><span
               >Add to <strong>Slack</strong></span
             ></a
